[gd_scene load_steps=22 format=2]

[ext_resource path="res://Assets/Fonts/Orbitron-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scripts/UI.gd" type="Script" id=2]
[ext_resource path="res://Assets/circle_05.png" type="Texture" id=3]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.968627, 0.294118, 0.294118, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.847059, 0.847059, 0.847059, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.847059, 0.847059, 0.847059, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="DynamicFont" id=3]
size = 18
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.294118, 0.796078, 0.968627, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.847059, 0.847059, 0.847059, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.847059, 0.847059, 0.847059, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="DynamicFont" id=6]
size = 15
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=7]
size = 26
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=8]
size = 64
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=9]
size = 22
font_data = ExtResource( 1 )

[sub_resource type="Curve" id=10]
_data = [ Vector2( 0.0714286, 0.672727 ), 0.0, 0.0, 0, 0, Vector2( 0.341837, 0.245455 ), 0.0, 0.0, 0, 0, Vector2( 0.5, 0.954545 ), 0.0, 0.0, 0, 0, Vector2( 0.75, 0.672727 ), 0.0, 0.0, 0, 0, Vector2( 0.94898, 0.827273 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 0.894118, 0.886275, 0.886275, 0.890196 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.945098, 0.945098, 0.945098, 1 )
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="StyleBoxFlat" id=12]
bg_color = Color( 0.996078, 0.262745, 0.262745, 0.890196 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.945098, 0.945098, 0.945098, 1 )
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="StyleBoxFlat" id=13]
bg_color = Color( 0.960784, 0.960784, 0.960784, 0 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.945098, 0.945098, 0.945098, 1 )
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="DynamicFont" id=14]
size = 21
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=15]
bg_color = Color( 0.894118, 0.886275, 0.886275, 0.890196 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.945098, 0.945098, 0.945098, 1 )
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="Animation" id=16]
tracks/0/type = "value"
tracks/0/path = NodePath("Game_Over:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Game_Over:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.1, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=17]
resource_name = "Pause_Hide"
tracks/0/type = "value"
tracks/0/path = NodePath("Pause_Menu:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Pause_Menu:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=18]
tracks/0/type = "value"
tracks/0/path = NodePath("Pause_Menu:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Pause_Menu:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.1, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="UI" type="CanvasLayer" groups=[
"UI",
]]
pause_mode = 2
script = ExtResource( 2 )

[node name="Ui" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player_Health_Bar" type="ProgressBar" parent="Ui"]
margin_left = 13.928
margin_top = 38.0648
margin_right = 296.928
margin_bottom = 62.0648
custom_styles/fg = SubResource( 1 )
custom_styles/bg = SubResource( 2 )
value = 50.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Palyer_health" type="Label" parent="Ui/Player_Health_Bar"]
margin_left = 3.80275
margin_top = -30.0229
margin_right = 241.803
margin_bottom = -4.0229
custom_fonts/font = SubResource( 3 )
text = "Player's Health"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player_Ai" type="ProgressBar" parent="Ui"]
margin_left = 14.7018
margin_top = 94.3914
margin_right = 209.702
margin_bottom = 116.391
custom_styles/fg = SubResource( 4 )
custom_styles/bg = SubResource( 5 )
value = 100.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Palyer_Ai" type="Label" parent="Ui/Player_Ai"]
margin_left = 3.0
margin_top = -28.0
margin_right = 241.0
margin_bottom = 1.0
custom_fonts/font = SubResource( 6 )
text = "Player AI"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="Ui/Player_Ai"]

[node name="Score" type="Label" parent="Ui"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = 370.0
margin_right = 614.0
margin_bottom = 69.0
custom_fonts/font = SubResource( 7 )
text = "SCORE :"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Game_Over" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.05261
margin_top = -1.05264
margin_right = 1.05261
margin_bottom = -1.05261
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="Game_Over"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 2.21606
margin_bottom = 2.21606
color = Color( 0.756863, 0.756863, 0.756863, 0.329412 )

[node name="Game_Over" type="Label" parent="Game_Over"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -225.5
margin_top = -177.232
margin_right = 225.5
margin_bottom = -96.2316
custom_fonts/font = SubResource( 8 )
text = "GAME OVER"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score" type="Label" parent="Game_Over"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -75.0
margin_top = -58.8912
margin_right = 75.0
margin_bottom = -29.8912
custom_fonts/font = SubResource( 9 )
text = "SCORE :"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score_Tween" type="Tween" parent="Game_Over/Score"]

[node name="Particles2D" type="CPUParticles2D" parent="Game_Over/Score"]
position = Vector2( 141.137, 17.5502 )
emitting = false
amount = 24
speed_scale = 2.0
texture = ExtResource( 3 )
direction = Vector2( 0, -0.1 )
spread = 180.0
initial_velocity = 350.0
initial_velocity_random = 1.0
scale_amount = 0.03
scale_amount_random = 0.03
scale_amount_curve = SubResource( 10 )
hue_variation = 1.0
hue_variation_random = 1.0

[node name="Retry" type="Button" parent="Game_Over"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -94.0
margin_top = 18.6113
margin_right = 94.0
margin_bottom = 64.6113
custom_styles/hover = SubResource( 11 )
custom_styles/pressed = SubResource( 12 )
custom_styles/normal = SubResource( 13 )
custom_fonts/font = SubResource( 14 )
custom_colors/font_color_disabled = Color( 0.0666667, 0.0666667, 0.0666667, 1 )
custom_colors/font_color = Color( 0.901961, 0.890196, 0.890196, 1 )
custom_colors/font_color_hover = Color( 0.168627, 0.168627, 0.168627, 1 )
text = "RETRY"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainMenu" type="Button" parent="Game_Over"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -94.0
margin_top = 80.6443
margin_right = 94.0
margin_bottom = 126.644
custom_styles/hover = SubResource( 15 )
custom_styles/pressed = SubResource( 12 )
custom_styles/normal = SubResource( 13 )
custom_fonts/font = SubResource( 14 )
custom_colors/font_color_disabled = Color( 0.0666667, 0.0666667, 0.0666667, 1 )
custom_colors/font_color = Color( 0.901961, 0.890196, 0.890196, 1 )
custom_colors/font_color_hover = Color( 0.168627, 0.168627, 0.168627, 1 )
text = "MAIN MENU"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pause_Menu" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="Pause_Menu"]
modulate = Color( 0.345098, 0.345098, 0.345098, 0.54902 )
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Pause_Menu" type="Label" parent="Pause_Menu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -245.5
margin_top = -222.65
margin_right = 245.5
margin_bottom = -141.649
custom_fonts/font = SubResource( 8 )
text = "PAUSE MENU"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainMenu" type="Button" parent="Pause_Menu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -94.0
margin_top = 51.2642
margin_right = 94.0
margin_bottom = 97.2639
custom_styles/hover = SubResource( 15 )
custom_styles/pressed = SubResource( 12 )
custom_styles/normal = SubResource( 13 )
custom_fonts/font = SubResource( 14 )
custom_colors/font_color_disabled = Color( 0.0666667, 0.0666667, 0.0666667, 1 )
custom_colors/font_color = Color( 0.901961, 0.890196, 0.890196, 1 )
custom_colors/font_color_hover = Color( 0.168627, 0.168627, 0.168627, 1 )
text = "MAIN MENU"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Resume" type="Button" parent="Pause_Menu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -94.0
margin_top = -1.89709
margin_right = 94.0
margin_bottom = 44.1027
custom_styles/hover = SubResource( 15 )
custom_styles/pressed = SubResource( 12 )
custom_styles/normal = SubResource( 13 )
custom_fonts/font = SubResource( 14 )
custom_colors/font_color_disabled = Color( 0.0666667, 0.0666667, 0.0666667, 1 )
custom_colors/font_color = Color( 0.901961, 0.890196, 0.890196, 1 )
custom_colors/font_color_hover = Color( 0.168627, 0.168627, 0.168627, 1 )
text = "RESUME"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
pause_mode = 2
anims/Game_Over = SubResource( 16 )
anims/Pause_Hide = SubResource( 17 )
anims/Pause_Show = SubResource( 18 )
[connection signal="tween_all_completed" from="Ui/Player_Ai/Tween" to="." method="_on_Tween_tween_all_completed"]
[connection signal="tween_all_completed" from="Game_Over/Score/Score_Tween" to="." method="_on_Score_Tween_tween_all_completed"]
[connection signal="pressed" from="Game_Over/Retry" to="." method="_on_Retry_pressed"]
[connection signal="pressed" from="Game_Over/MainMenu" to="." method="_on_MainMenu_pressed"]
[connection signal="pressed" from="Pause_Menu/MainMenu" to="." method="_on_MainMenu_pressed"]
[connection signal="pressed" from="Pause_Menu/Resume" to="." method="_on_Resume_pressed"]
